# ChangeLog for dev-db/postgresql-docs
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-docs/ChangeLog,v 1.18 2009/09/09 22:57:58 patrick Exp $

*postgresql-docs-8.0.22 (09 Sep 2009)

  09 Sep 2009; Patrick Lauer <patrick@gentoo.org>
  +postgresql-docs-8.0.22.ebuild:
  Bump to 8.0.22

*postgresql-docs-8.2.14 (09 Sep 2009)
*postgresql-docs-8.1.18 (09 Sep 2009)

  09 Sep 2009; Patrick Lauer <patrick@gentoo.org>
  +postgresql-docs-8.1.18.ebuild, +postgresql-docs-8.2.14.ebuild:
  Bump to 8.1.18 and 8.2.14

*postgresql-docs-8.4.1 (09 Sep 2009)
*postgresql-docs-8.3.8 (09 Sep 2009)

  09 Sep 2009; Patrick Lauer <patrick@gentoo.org>
  +postgresql-docs-8.3.8.ebuild, +postgresql-docs-8.4.1.ebuild:
  Bump to 8.4.1 and 8.3.8

*postgresql-docs-8.4.0 (09 Sep 2009)

  09 Sep 2009; Patrick Lauer <patrick@gentoo.org>
  +postgresql-docs-8.4.0.ebuild:
  Bump to 8.4.0. Fixes #276125

  05 Jun 2009; Steve Dibb <beandog@gentoo.org>
  postgresql-docs-7.3.21.ebuild, postgresql-docs-7.4.19.ebuild,
  postgresql-docs-7.4.21.ebuild, postgresql-docs-8.0.15.ebuild,
  postgresql-docs-8.0.17.ebuild, postgresql-docs-8.1.11.ebuild,
  postgresql-docs-8.1.13.ebuild, postgresql-docs-8.2.9.ebuild,
  postgresql-docs-8.2.10.ebuild, postgresql-docs-8.2.11.ebuild,
  postgresql-docs-8.3.5.ebuild, postgresql-docs-8.3.7.ebuild:
  Restrict make test

  28 May 2009; Christian Faulhammer <fauli@gentoo.org>
  postgresql-docs-8.1.11.ebuild:
  stable x86, bug 268138

  03 May 2009; Raúl Porcel <armin76@gentoo.org>
  postgresql-docs-8.3.5.ebuild, postgresql-docs-8.3.7.ebuild:
  Add ~s390

*postgresql-docs-8.3.7 (09 Apr 2009)

  09 Apr 2009; Caleb Tennis <caleb@gentoo.org>
  +postgresql-docs-8.3.7.ebuild:
  version bump

*postgresql-docs-8.2.11 (03 Dec 2008)

  03 Dec 2008; Caleb Tennis <caleb@gentoo.org>
  +postgresql-docs-8.2.11.ebuild, -postgresql-docs-8.3.4.ebuild,
  +postgresql-docs-8.3.5.ebuild:
  version bumps
