@@ -1,6 +1,10 @@
 # ChangeLog for dev-db/postgresql-docs
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-docs/ChangeLog,v 1.18 2009/09/09 22:57:58 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-docs/ChangeLog,v 1.19 2009/09/23 17:26:22 armin76 Exp $
+
+  23 Sep 2009; Raúl Porcel <armin76@gentoo.org>
+  postgresql-docs-8.4.0.ebuild, postgresql-docs-8.4.1.ebuild:
+  Re-add ~s390
 
 *postgresql-docs-8.0.22 (09 Sep 2009)
 
